--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   "dependencies": {
     "@material-ui/core": "4.3.2",
     "@material-ui/icons": "4.2.1",
+    "apexcharts": "^3.20.0",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.9.0",
+    "object-path": "^0.11.4",
     "perfect-scrollbar": "1.4.0",
     "prop-types": "15.7.2",
     "react": "16.9.0",
+    "react-bootstrap": "^1.3.0",
     "react-chartist": "0.13.3",
     "react-dom": "16.9.0",
     "react-google-maps": "9.4.5",
+    "react-inlinesvg": "^2.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.1.0",
     "react-swipeable-views": "0.13.3"
