--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "4.3.2",
     "@material-ui/icons": "4.2.1",
     "apexcharts": "^3.20.0",
+    "chart.js": "^2.9.3",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.9.0",
@@ -17,6 +18,7 @@
     "react": "16.9.0",
     "react-bootstrap": "^1.3.0",
     "react-chartist": "0.13.3",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "16.9.0",
     "react-google-maps": "9.4.5",
     "react-inlinesvg": "^2.0.1",
