--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
-    "@material-ui/core": "4.3.2",
+    "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "apexcharts": "^3.20.0",
     "chart.js": "^2.9.3",
     "chartist": "0.10.1",
